--- a/strawberry.org
+++ b/strawberry.org
@@ -1,6 +1,6 @@
 #+INCLUDE:   /home/ucecesf/hg/homepages/level-0.org
 #+title: Strawberry plant propagation algorithm
-#+options: num:nil ^:nil toc:nil tex:imagemagick
+#+options: num:t ^:nil toc:nil tex:imagemagick
 
 | *Author*        | {{{author}}} ({{{email}}})                   |
 | *Last revision* | {{{modification-time(%Y-%m-%d %H:%M:%S,t)}}} |
@@ -61,7 +61,7 @@ Major version log:
 - November 2016 :: change of interface to Strawberry: the objective function must now return not only the objective function values (first entry in return list) but also the feasibility (measure of constraint violation) of the point in the search space (as second entry).
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
-- September 2015 :: implemented a rank based fitness, used to prepare results in [[file:~/synced/research/multiobjective.optimisation/strawberry/paper.pdf][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
+- September 2015 :: implemented a rank based fitness, used to prepare results in [[http://www.springer.com/gb/book/9783319299730][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
 * TODO [4/14] improvements or bugs                            :noexport:
 - [ ] define a GAMS interface; for multi-objective problem, solve the same model for each criterion individually to generate the objective function value for each design point. 
 - [ ] Note taken at MCDA meeting in Padova
@@ -653,7 +653,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2017.09.14 11:58:11';
+      strawberry_version = '2017.10.29 12:33:20';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
@@ -1095,6 +1095,11 @@ Strawberry is used on this objective function within a simple rectangle domain.
 #+begin_src shell :exports results :results output
 hg log --template "{date|shortdate} {desc|firstline}\n" --limit 10 strawberry.org
 #+end_src
+* Log of requests for code                                    :noexport:
+** [2017-10-29 Sun] "Ali Shujaat.." <ali_shujaat@live.com>
+- Subject :: .m file for Modified PPA Algorithm
+- Email :: [[gnus:nnimap+ericatucl:general#b5356a5cc9c241e78648eb3dfde00f35@HE1PR01MB1898.eurprd01.prod.exchangelabs.com][Email from Ali Shujaat..: .m file for Modified PPA Algor]]
+
 * settings                                                    :noexport:
 ** org startup on file visit
 #+name: startup
