--- a/strawberry.org
+++ b/strawberry.org
@@ -62,7 +62,12 @@ Major version log:
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[http://www.springer.com/gb/book/9783319299730][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
-* TODO [4/14] improvements or bugs                            :noexport:
+* TODO [4/15] improvements or bugs                            :noexport:
+- [ ] some possible applications arising from the EGL 2017 conference
+  - [ ] Abdellah's student on minimum volume ellipsoid:
+    - could the objective function be \(\min V_E / r_p\) where \(r_p\) is the ratio of points inside the ellipsoid to the total number of points?  Need to worry about 0 case but otherwise this would emphasise the volumes with most points.
+    - [ ] the outlier problem is really a multi-objective problem, minimising volume vs minimising number of points excluded.  Consider applying *strawberry* to this?  The objective function is quite straightforward.
+    - the constraint for the largest volume problem, to ensure that the ellipsoid is within the points, is not quite sufficient.  Think of banana shape with one end of the ellipsoid within the inside curve of the banana?
 - [ ] define a GAMS interface; for multi-objective problem, solve the same model for each criterion individually to generate the objective function value for each design point. 
 - [ ] Note taken at MCDA meeting in Padova
   implement a relaxed dominance definition in Strawberry to better explore the set of non-dominated points.  \epsilon would be based on range of values expected or range actually existing in a population. the identification of an \epsilon based non-dominated set will be non-deterministic or not unique.  Does this matter?
@@ -688,7 +693,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2017.11.24 11:49:54';
+      strawberry_version = '2018.01.02 13:25:17';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
