--- a/strawberry.org
+++ b/strawberry.org
@@ -62,7 +62,10 @@ Major version log:
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[http://www.springer.com/gb/book/9783319299730][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
-* TODO [4/15] improvements or bugs                            :noexport:
+* TODO [4/17] improvements or bugs                            :noexport:
+:PROPERTIES:
+:COOKIE_DATA: recursive
+:END:
 - [ ] some possible applications arising from the EGL 2017 conference
   - [ ] Abdellah's student on minimum volume ellipsoid:
     - could the objective function be \(\min V_E / r_p\) where \(r_p\) is the ratio of points inside the ellipsoid to the total number of points?  Need to worry about 0 case but otherwise this would emphasise the volumes with most points.
@@ -693,7 +696,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2018.01.02 13:25:17';
+      strawberry_version = '2018.01.02 13:41:18';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
